--- a/src_target/stylesheets/index.css
+++ b/src_target/stylesheets/index.css
@@ -150,11 +150,10 @@ header {
 
 @media only screen and (max-width: 800px) {
   header {
-    position: relative; }
+    position: absolute; }
     header + div {
-      margin-top: 0 !important; }
+      margin-top: 3.6rem !important; }
     header.index-header {
-      position: absolute;
       background-color: transparent; } }
 
 header .service-links {
